[package]
name = "rustAuth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
jsonwebtoken = "8.3"
bcrypt = "0.14"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"